# polib

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yaml
benches/: bench.rs  parse-po-file.rs
examples/: compile.rs  copy.rs  filter.rs  print.rs
src/: catalog.rs  lib.rs  message.rs  metadata.rs  plural.rs
src/catalog/: iterator.rs  mod.rs
src/message/: builder.rs  flags.rs  key.rs  mod.rs  view.rs
src/mo_file/: mo_file_writer.rs  mod.rs
src/po_file/: escape.rs  mod.rs  po_file_parser.rs  po_file_writer.rs
src/pofile/: catalog.rs  message.rs  mod.rs  parser.rs
tests/: sample.po  test.rs
