[package]
name = "polib"
version = "0.2.0"
edition = "2021"
description = "Read, manipulate and store translation data in GNU gettext PO format."
authors = [ "Brett Dong <brett.browning.dong@gmail.com>" ]
license = "MIT"
repository = "https://github.com/brettdong/polib"
keywords = [ "gettext" ]
readme = "README.md"
documentation = "https://docs.rs/polib"

[dependencies]
linereader = "0.4.0"
concat-string = "1.0.1"
